changed build process to use libcalico as a submodule. Fixed bug regarding temporary namespace in libcalico and lots of changes to calico_mesos.py to complete functionality of the prepare function. and modified ST to do a full run through of it

--- a/build_calico_mesos/Dockerfile
+++ b/build_calico_mesos/Dockerfile
@@ -22,7 +22,8 @@ RUN apt-get update && \
 # Install the python packages needed for running UTs and building calico_mesos.
 # Git is installed to allow pip installation from a github repo and also so
 # that the right branch can be included if uploading coverage.
-ADD requirements.txt /code/
+# ADD requirements.txt /code/
+ADD ./ /code/
 RUN pip install -r requirements.txt
 
 # Can't run pyinstaller as root so add a user - https://github.com/pyinstaller/pyinstaller/issues/1081
