--- a/dockerized-mesos/config/units/mesos-agent.service
+++ b/dockerized-mesos/config/units/mesos-agent.service
@@ -10,6 +10,10 @@ EnvironmentFile=/etc/sysconfig/calico
 ExecStartPre=-/usr/bin/docker kill mesos-agent
 ExecStartPre=-/usr/bin/docker rm mesos-agent
 ExecStart=/usr/bin/docker run --name mesos-agent \
+  -e SSL_ENABLED=true \
+  -e SSL_SUPPORT_DOWNGRADE=true \
+  -e SSL_KEY_FILE=/keys/key.pem \
+  -e SSL_CERT_FILE=/keys/cert.pem \
   -e MESOS_MASTER=zk://${ZK}:2181/mesos/master \
   -e MESOS_IP=${IP} \
   -e MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins \
@@ -21,6 +25,7 @@ ExecStart=/usr/bin/docker run --name mesos-agent \
   -e MESOS_ISOLATION=com_mesosphere_mesos_NetworkIsolator \
   -e MESOS_HOOKS=com_mesosphere_mesos_NetworkHook \
   -e ETCD_AUTHORITY=${ETCD_AUTHORITY} \
+  -v /keys:/keys \
   --net host \
   --privileged \
   calico/mesos-calico:0.27 /root/runagent
