--- a/dockerized-mesos/config/units/marathon.service
+++ b/dockerized-mesos/config/units/marathon.service
@@ -12,7 +12,7 @@ ExecStart=/usr/bin/docker run --name marathon \
   -e MARATHON_ZK=zk://localhost:2181/marathon \
   -e MARATHON_MAX_TASKS_PER_OFFER=32 \
   --net host \
-  mesosphere/marathon:v0.9.1
+  djosborne/marathon:docker
 
 [Install]
 WantedBy=multi-user.target
